--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@openrouter/sdk": "^0.2.9",
     "@sinclair/typebox": "^0.34.41",
     "@toon-format/toon": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.560.0",
     "openai": "^6.10.0",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "vue": "^3.5.21"
   },
   "devDependencies": {
