--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.560.0",
     "openai": "^6.10.0",
+    "reka-ui": "^2.6.1",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "vue": "^3.5.21"
