--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@openrouter/sdk": "^0.2.9",
     "@sinclair/typebox": "^0.34.41",
+    "@tanstack/vue-table": "^8.21.3",
     "@toon-format/toon": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
