--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.6.0",
+    "franc-min": "^6.2.0",
     "lucide-vue-next": "^0.560.0",
     "openai": "^6.10.0",
     "reka-ui": "^2.6.1",
