--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "openai": "^6.10.0",
     "reka-ui": "^2.6.1",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
     "vaul-vue": "^0.4.1",
     "vee-validate": "^4.15.1",
