--- a/biome.json
+++ b/biome.json
@@ -58,6 +58,14 @@
       "formatter": {
         "enabled": true
       },
+      "linter": {
+        "rules": {
+          "correctness": {
+            "noUnusedImports": "off",
+            "noUnusedVariables": "off"
+          }
+        }
+      },
       "assist": {
         "enabled": true,
         "actions": {
