--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,24 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@": [
+        "."
+      ],
+      "@/*": [
+        "./*"
+      ],
+      "~": [
+        "."
+      ],
+      "~/*": [
+        "./*"
+      ],
+      "#components/*": [
+        "./components/*"
+      ],
+      "#utils/*": [
+        "./utils/*"
+      ]
     }
   }
 }
